// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`slate converts bold.json to concerto 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Strong",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "bold",
            },
          ],
        },
      ],
    },
  ],
  "xmlns": "slate",
}
`;

exports[`slate converts code.json to concerto 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Code",
          "text": "some code",
        },
      ],
    },
  ],
  "xmlns": "slate",
}
`;

exports[`slate converts italic.json to concerto 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Emph",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "italic",
            },
          ],
        },
      ],
    },
  ],
  "xmlns": "slate",
}
`;

exports[`slate converts plain.json to concerto 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "plain",
        },
      ],
    },
  ],
  "xmlns": "slate",
}
`;

exports[`slate converts text.json to concerto 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "plain ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Emph",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "italic",
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": " ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Strong",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "bold",
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": " ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Emph",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Strong",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "bold-italic",
                },
              ],
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": " ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Code",
          "text": "code",
        },
      ],
    },
  ],
  "xmlns": "slate",
}
`;
